fixed register layout, and more, Pog

--- a/app/src/main/res/layout/activity_configuration.xml
+++ b/app/src/main/res/layout/activity_configuration.xml
@@ -10,7 +10,7 @@
         android:id="@+id/backgroundImageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:scaleType="fitXY"
+        android:scaleType="centerCrop"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -37,12 +37,12 @@
         android:fontFamily="sans-serif-smallcaps"
         android:text="Settings"
         android:textColor="#C1F46E"
-        android:textSize="24sp"
+        android:textSize="34sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/backgroundImageView"
-        app:layout_constraintVertical_bias="0.32" />
+        app:layout_constraintVertical_bias="0.41000003" />
 
     <Button
         android:id="@+id/languageButton"
@@ -54,8 +54,11 @@
         app:iconTint="@color/green_strong"
         app:layout_constraintBottom_toTopOf="@+id/soundButton"
         app:layout_constraintEnd_toEndOf="@+id/settingsTextView"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="@+id/settingsTextView"
         app:layout_constraintTop_toBottomOf="@+id/settingsTextView"
+        app:layout_constraintVertical_bias="0.100000024"
+        app:layout_constraintVertical_chainStyle="packed"
         app:rippleColor="@color/green_strong"
         app:strokeColor="@color/green_strong" />
 
@@ -67,11 +70,11 @@
         android:text="Sound: ON"
         android:textColor="@color/green_soft"
         app:iconTint="@color/green_strong"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/musicButton"
         app:layout_constraintEnd_toEndOf="@+id/languageButton"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="@+id/languageButton"
-        app:layout_constraintTop_toBottomOf="@+id/settingsTextView"
-        app:layout_constraintVertical_bias="0.3"
+        app:layout_constraintTop_toBottomOf="@+id/languageButton"
         app:rippleColor="@color/green_strong"
         app:strokeColor="@color/green_strong" />
 
@@ -83,11 +86,11 @@
         android:text="Music: ON"
         android:textColor="@color/green_soft"
         app:iconTint="@color/green_strong"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/backgroundImageView"
         app:layout_constraintEnd_toEndOf="@+id/soundButton"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="@+id/soundButton"
         app:layout_constraintTop_toBottomOf="@+id/soundButton"
-        app:layout_constraintVertical_bias="0.19999999"
         app:rippleColor="@color/green_strong"
         app:strokeColor="@color/green_strong" />
 
