--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -37,6 +37,7 @@
         android:hint="Email"
         android:paddingLeft="128px"
         android:paddingRight="128px"
+        android:fontFamily="@font/simpy_rounded"
         android:textColorHint="@color/green_soft"
         app:boxStrokeColor="@color/green_strong"
         app:hintTextColor="@color/green_strong"
@@ -55,6 +56,7 @@
             android:layout_height="wrap_content"
             android:paddingLeft="32px"
             android:paddingRight="32px"
+            android:fontFamily="@font/simpy_rounded"
             android:textColor="@color/green_strong"
             android:textCursorDrawable="@color/white" />
     </com.google.android.material.textfield.TextInputLayout>
@@ -69,6 +71,7 @@
         android:hint="Password"
         android:paddingLeft="128px"
         android:paddingRight="128px"
+        android:fontFamily="@font/simpy_rounded"
         android:textColorHint="@color/green_soft"
         app:boxStrokeColor="@color/green_strong"
         app:hintTextColor="@color/green_strong"
@@ -89,6 +92,7 @@
             android:layout_height="wrap_content"
             android:paddingLeft="32px"
             android:paddingRight="32px"
+            android:fontFamily="@font/simpy_rounded"
             android:inputType="textPassword"
             android:textColor="@color/green_strong"
             android:textCursorDrawable="@color/white"/>
@@ -114,6 +118,7 @@
         android:layout_height="wrap_content"
         android:text="LogIn"
         android:textColor="@color/green_soft"
+        android:fontFamily="@font/simpy_rounded"
         app:iconTint="@color/green_strong"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/registerButton"
@@ -131,6 +136,7 @@
         android:layout_marginTop="4dp"
         android:text="Register"
         android:textColor="@color/green_soft"
+        android:fontFamily="@font/simpy_rounded"
         app:iconTint="@color/green_strong"
         app:layout_constraintBottom_toTopOf="@+id/guestButton"
         app:layout_constraintEnd_toEndOf="parent"
@@ -148,6 +154,7 @@
         android:layout_height="wrap_content"
         android:text="Guest"
         android:textColor="@color/green_soft"
+        android:fontFamily="@font/simpy_rounded"
         app:iconTint="@color/green_strong"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/registerButton"
