--- a/app/src/main/res/layout/fragment_hangman_you_lose.xml
+++ b/app/src/main/res/layout/fragment_hangman_you_lose.xml
@@ -47,6 +47,7 @@
         android:textAlignment="center"
         android:textColor="#8BC34A"
         android:textSize="34sp"
+        android:fontFamily="@font/simpy_rounded"
         app:layout_constraintBottom_toBottomOf="@+id/ylTextBoxImage"
         app:layout_constraintEnd_toEndOf="@+id/ylTextBoxImage"
         app:layout_constraintStart_toStartOf="@+id/ylTextBoxImage"
@@ -61,6 +62,7 @@
         android:textAlignment="center"
         android:textColor="#8BC34A"
         android:textSize="34sp"
+        android:fontFamily="@font/simpy_rounded"
         app:layout_constraintBottom_toBottomOf="@+id/ylTextBoxImage"
         app:layout_constraintEnd_toEndOf="@+id/ylTextBoxImage"
         app:layout_constraintStart_toStartOf="@+id/ylTextBoxImage"
@@ -74,6 +76,7 @@
         android:text="The word was:"
         android:textColor="#A40845"
         android:textSize="20sp"
+        android:fontFamily="@font/simpy_rounded"
         app:layout_constraintBottom_toBottomOf="@+id/ylTextBoxImage"
         app:layout_constraintEnd_toEndOf="@+id/ylTextBoxImage"
         app:layout_constraintStart_toStartOf="@+id/ylTextBoxImage"
@@ -89,6 +92,7 @@
         android:textAlignment="center"
         android:textColor="#A50845"
         android:textSize="34sp"
+        android:fontFamily="@font/simpy_rounded"
         app:layout_constraintBottom_toBottomOf="@+id/ylTextBoxImage"
         app:layout_constraintEnd_toEndOf="@+id/ylTextBoxImage"
         app:layout_constraintStart_toStartOf="@+id/ylTextBoxImage"
