--- a/app/src/main/res/layout/fragment_hangman_you_win.xml
+++ b/app/src/main/res/layout/fragment_hangman_you_win.xml
@@ -58,6 +58,7 @@
         android:textAlignment="center"
         android:textColor="#8BC34A"
         android:textSize="34sp"
+        android:fontFamily="@font/simpy_rounded"
         app:layout_constraintBottom_toBottomOf="@+id/ywTextBoxImage"
         app:layout_constraintEnd_toEndOf="@+id/ywTextBoxImage"
         app:layout_constraintStart_toStartOf="@+id/ywTextBoxImage"
@@ -72,6 +73,7 @@
         android:textAlignment="center"
         android:textColor="#8BC34A"
         android:textSize="34sp"
+        android:fontFamily="@font/simpy_rounded"
         app:layout_constraintBottom_toBottomOf="@+id/ywTextBoxImage"
         app:layout_constraintEnd_toEndOf="@+id/ywTextBoxImage"
         app:layout_constraintStart_toStartOf="@+id/ywTextBoxImage"
@@ -85,6 +87,7 @@
         android:text="You guessed correctly:"
         android:textColor="#8BC34A"
         android:textSize="20sp"
+        android:fontFamily="@font/simpy_rounded"
         app:layout_constraintBottom_toBottomOf="@+id/ywTextBoxImage"
         app:layout_constraintEnd_toEndOf="@+id/ywTextBoxImage"
         app:layout_constraintStart_toStartOf="@+id/ywTextBoxImage"
@@ -99,6 +102,7 @@
         android:textAlignment="center"
         android:textColor="#8BC34A"
         android:textSize="34sp"
+        android:fontFamily="@font/simpy_rounded"
         app:layout_constraintBottom_toBottomOf="@+id/ywTextBoxImage"
         app:layout_constraintEnd_toEndOf="@+id/ywTextBoxImage"
         app:layout_constraintStart_toStartOf="@+id/ywTextBoxImage"
