--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -39,6 +39,7 @@
         android:hint="Email"
         android:paddingLeft="128px"
         android:paddingRight="128px"
+        android:fontFamily="@font/simpy_rounded"
         android:textColorHint="@color/green_soft"
         app:helperText="Required"
         app:helperTextTextColor="@color/error_red"
@@ -61,6 +62,7 @@
             android:layout_height="wrap_content"
             android:paddingLeft="32px"
             android:paddingRight="32px"
+            android:fontFamily="@font/simpy_rounded"
             android:textColor="@color/green_strong"
             android:textCursorDrawable="@color/white" />
     </com.google.android.material.textfield.TextInputLayout>
@@ -75,6 +77,7 @@
         android:hint="Username"
         android:paddingLeft="128px"
         android:paddingRight="128px"
+        android:fontFamily="@font/simpy_rounded"
         android:textColorHint="@color/green_soft"
         app:helperText="Required"
         app:helperTextTextColor="@color/error_red"
@@ -96,6 +99,7 @@
             android:layout_height="wrap_content"
             android:paddingLeft="32px"
             android:paddingRight="32px"
+            android:fontFamily="@font/simpy_rounded"
             android:textColor="@color/green_strong"
             android:textCursorDrawable="@color/white" />
     </com.google.android.material.textfield.TextInputLayout>
@@ -110,6 +114,7 @@
         android:hint="Password"
         android:paddingLeft="128px"
         android:paddingRight="128px"
+        android:fontFamily="@font/simpy_rounded"
         android:textColorHint="@color/green_soft"
         app:helperText="Required"
         app:helperTextTextColor="@color/error_red"
@@ -134,6 +139,7 @@
             android:inputType="textPassword"
             android:paddingLeft="32px"
             android:paddingRight="32px"
+            android:fontFamily="@font/simpy_rounded"
             android:textColor="@color/green_strong"
             android:textCursorDrawable="@color/white" />
     </com.google.android.material.textfield.TextInputLayout>
@@ -145,6 +151,7 @@
         android:layout_height="wrap_content"
         android:text="Register"
         android:textColor="@color/green_soft"
+        android:fontFamily="@font/simpy_rounded"
         app:iconTint="@color/green_strong"
         app:layout_constraintBottom_toTopOf="@+id/backLoginButton"
         app:layout_constraintEnd_toEndOf="parent"
@@ -161,6 +168,7 @@
         android:layout_height="wrap_content"
         android:text="Login"
         android:textColor="@color/green_soft"
+        android:fontFamily="@font/simpy_rounded"
         app:iconTint="@color/green_strong"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/doRegisterButton"
