--- a/app/src/main/res/layout/item_ranking.xml
+++ b/app/src/main/res/layout/item_ranking.xml
@@ -24,7 +24,7 @@
                 android:id="@+id/leaderboardProfileImage"
                 android:layout_width="58dp"
                 android:layout_height="58dp"
-                android:layout_marginStart="24dp"
+                android:layout_marginStart="48dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -63,9 +63,10 @@
                 android:id="@+id/leaderboardRank"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginEnd="48dp"
+                android:fontFamily="@font/simpy_rounded"
                 android:text="TextView"
                 android:textColor="@color/green_strong"
-                android:fontFamily="@font/simpy_rounded"
                 app:layout_constraintBottom_toBottomOf="@+id/leaderboardUsernameText"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.953"
