--- a/app/src/main/res/layout/fragment_hangman_game_pause.xml
+++ b/app/src/main/res/layout/fragment_hangman_game_pause.xml
@@ -11,6 +11,7 @@
         android:layout_height="wrap_content"
         android:alpha="0.7"
         android:scaleType="fitXY"
+        android:soundEffectsEnabled="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
