--- a/app/src/main/res/layout/activity_configuration.xml
+++ b/app/src/main/res/layout/activity_configuration.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".abductmania.ConfigurationActivity">
+    tools:context=".abductmania.Config.ConfigurationActivity">
 
     <ImageView
         android:id="@+id/backgroundImageView"
