--- a/app/src/main/res/layout/activity_ranking.xml
+++ b/app/src/main/res/layout/activity_ranking.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".abductmania.RankingActivity">
+    tools:context=".abductmania.Ranking.RankingActivity">
 
     <ImageView
         android:id="@+id/leaderboardBackground"
