--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -112,23 +112,24 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/guestButton"
-        app:layout_constraintVertical_bias="0.815" />
+        app:layout_constraintTop_toBottomOf="@+id/passwordInputLayout" />
 
     <Button
         android:id="@+id/loginButton"
         style="?attr/materialButtonOutlinedStyle"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="48dp"
+        android:fontFamily="@font/simpy_rounded"
         android:text="LogIn"
         android:textColor="@color/green_soft"
-        android:fontFamily="@font/simpy_rounded"
         app:iconTint="@color/green_strong"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/registerButton"
-        app:layout_constraintStart_toStartOf="@+id/registerButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toEndOf="@+id/loadingBar"
         app:layout_constraintTop_toBottomOf="@+id/passwordInputLayout"
-        app:layout_constraintVertical_bias="0.04000002"
+        app:layout_constraintVertical_bias="0.060000002"
         app:rippleColor="@color/green_strong"
         app:strokeColor="@color/green_strong" />
 
@@ -137,36 +138,30 @@
         style="?attr/materialButtonOutlinedStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
+        android:layout_marginStart="48dp"
+        android:fontFamily="@font/simpy_rounded"
         android:text="Register"
         android:textColor="@color/green_soft"
-        android:fontFamily="@font/simpy_rounded"
         app:iconTint="@color/green_strong"
-        app:layout_constraintBottom_toTopOf="@+id/guestButton"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.501"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/loadingBar"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/loginButton"
-        app:layout_constraintVertical_bias="0.405"
+        app:layout_constraintTop_toBottomOf="@+id/passwordInputLayout"
+        app:layout_constraintVertical_bias="0.060000002"
         app:rippleColor="@color/green_strong"
         app:strokeColor="@color/green_strong" />
 
-    <Button
-        android:id="@+id/guestButton"
-        style="?attr/materialButtonOutlinedStyle"
-        android:layout_width="0dp"
+    <TextView
+        android:id="@+id/guestText"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Guest"
-        android:textColor="@color/green_soft"
-        android:fontFamily="@font/simpy_rounded"
-        app:iconTint="@color/green_strong"
+        android:text="Login as guest"
+        android:textColor="#9CF322"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/registerButton"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/registerButton"
-        app:layout_constraintTop_toBottomOf="@+id/passwordInputLayout"
-        app:layout_constraintVertical_bias="0.561"
-        app:rippleColor="@color/green_strong"
-        app:strokeColor="@color/green_strong" />
+        app:layout_constraintEnd_toEndOf="@+id/loginButton"
+        app:layout_constraintTop_toBottomOf="@+id/loginButton"
+        app:layout_constraintVertical_bias="0.04000002" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
