--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,7 @@
     <color name="white">#FFFFFFFF</color>
     <color name="green_soft">#C1F46E</color>
     <color name="green_strong">#9CF322</color>
+    <color name="green_strong_selected">#12EA0B</color>
     <color name="purple_dark">#1F1C3B</color>
     <color name="error_red">#A60845</color>
     <color name="mtrl_textinput_default_box_stroke_color">#9CF322</color>
