--- a/app/src/main/res/layout/fragment_hangman_you_lose.xml
+++ b/app/src/main/res/layout/fragment_hangman_you_lose.xml
@@ -26,7 +26,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.7"
         app:srcCompat="@drawable/abductmania_youlose_text_box" />
 
     <ImageView
@@ -38,6 +37,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.7"
         app:srcCompat="@drawable/abductmania_youlose_ufos" />
 
     <TextView
@@ -105,11 +105,11 @@
         android:layout_width="90dp"
         android:layout_height="90dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.3"
+        app:layout_constraintEnd_toStartOf="@+id/ylWatchAdIcon"
+        app:layout_constraintHorizontal_bias="0.7"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.92"
+        app:layout_constraintVertical_bias="0.9"
         app:srcCompat="@drawable/abductmania_button_replay" />
 
     <ImageView
@@ -118,10 +118,10 @@
         android:layout_height="90dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.7"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintHorizontal_bias="0.3"
+        app:layout_constraintStart_toEndOf="@+id/ylWatchAdIcon"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.92"
+        app:layout_constraintVertical_bias="0.9"
         app:srcCompat="@drawable/abductmania_button_home" />
 
     <ImageView
@@ -134,5 +134,16 @@
         app:layout_constraintTop_toTopOf="@+id/ylTextBoxImage"
         app:layout_constraintVertical_bias="0.13"
         app:srcCompat="@drawable/abductmania_youlose_text" />
+
+    <ImageView
+        android:id="@+id/ylWatchAdIcon"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.87"
+        app:srcCompat="@drawable/abductmania_leaderboard_profile_image" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
