--- a/app/src/main/res/layout/fragment_hangman_retry_game.xml
+++ b/app/src/main/res/layout/fragment_hangman_retry_game.xml
@@ -89,4 +89,14 @@
         app:rippleColor="@color/green_strong"
         app:strokeColor="@color/green_strong" />
 
+    <ProgressBar
+        android:id="@+id/rgProgressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/rgGiveUpButton" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
