--- a/app/src/main/res/layout/activity_hangman_game.xml
+++ b/app/src/main/res/layout/activity_hangman_game.xml
@@ -806,6 +806,22 @@
         app:layout_constraintTop_toTopOf="@+id/zButton"
         app:srcCompat="@drawable/abductamania_wrong" />
 
+    <com.google.android.gms.ads.AdView
+        android:id="@+id/adView"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginBottom="24dp"
+        app:adSize="SMART_BANNER"
+        app:adUnitId="ca-app-pub-3940256099942544/6300978111"
+        app:layout_constraintBottom_toTopOf="@+id/dButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/guesswordText" />
+
     <FrameLayout
         android:id="@+id/fragmentFrameLayout"
         android:layout_width="0dp"
